--- a/src/Layout/header/HomeImg.css
+++ b/src/Layout/header/HomeImg.css
@@ -42,12 +42,13 @@
 }
 
 .posterImage__runtime {
+    font-weight: 900;
     font-size: 2rem;
     margin-bottom: 1rem;
 }
 
 .posterImage__rating {
-    margin-left: 3rem;
+    margin-left: 1rem;
 }
 
 .posterImage__description {
@@ -57,4 +58,13 @@
     display: flex;
     text-align: left;
     width: 50%;
+}
+
+.posterImage__discount {
+    background: #ff0000;
+    padding: 2px 5px;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: 800;
+    margin-left: -4rem;
 }
