--- a/src/Component/gameCard.css
+++ b/src/Component/gameCard.css
@@ -1,4 +1,5 @@
 .gameCard {
+    cursor: pointer;
     position: relative;
     padding: 25px 20px;
     margin-bottom: 25px;
@@ -9,7 +10,44 @@
     background: var(--bgcolor);
     box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
         5px 5px 15px rgba(0, 0, 0, 0.35);
+
+    transform: translate(0, 0);
+    transition: all .15s ease;
+    z-index: 10;
 }
+
+.Bg {
+    border-radius: 20px;
+    background-color: var(--second);
+}
+
+
+.gameCard:before {
+    top: 0;
+    left: 0;
+    transform-origin: top left;
+    transform: rotate(-45deg) scale(0);
+}
+
+.gameCard:after {
+    right: 0;
+    bottom: 0;
+    transform-origin: bottom right;
+    transform: rotate(45deg) scale(0);
+}
+
+.gameCard:hover {
+    transform: translate(6px, -6px);
+}
+
+.gameCard:hover:before {
+    transform: rotate(-45deg) scale(1);
+}
+
+.gameCard:hover:after {
+    transform: rotate(45deg) scale(1);
+}
+
 
 .gameCard img {
     border-radius: 20px;
@@ -120,7 +158,7 @@
 }
 
 .gameCard .addBag:hover {
-    background: var(--primary);
+    background: var(--Red);
 }
 
 
