--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ body {
   --second: #f15000;
   --bgcolor: #222222;
   --Red: #EE1D52;
-  --Blue: #69C9D0
+  --Blue: #69C9D0;
 }
 
 /* h1,
@@ -58,6 +58,11 @@ body {
   min-height: 100vh;
   /* overflow: hidden; */
 }
+
+.linear-bg {
+  background: linear-gradient(269.82deg, #07091c00 0.17%, #080a1ad6 99.87%);
+}
+
 
 
 /* .App {
