--- a/src/Component/Test.css
+++ b/src/Component/Test.css
@@ -71,22 +71,22 @@ img {
 .T-Price .T-currentPrice {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     height: 70px;
     padding: 20px 10px;
     text-shadow: 0px 0px 5px #000000;
     margin-top: 1rem;
     margin-left: 1.3rem;
-
+    font-size: 1.2rem;
     width: 100%;
     font-weight: 600;
     text-align: center;
 }
 
-.T-discount span {
+.T-discount i {
     color: var(--Red);
 }
 
@@ -123,8 +123,8 @@ img {
     margin: 0 auto;
     font-family: 'Bauhaus 93';
     border-radius: 4px;
-    border: 2px solid var(--second);
-    background-color: var(--second);
+    border: 2px solid #fff;
+    background-color: #fff;
     border-radius: 20px;
     color: #000;
     transition: .3s;
@@ -251,4 +251,25 @@ iframe {
     background: var(--bgcolor);
     box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
         5px 5px 15px rgba(0, 0, 0, 0.35);
+}
+
+@media (max-width: 991px) {
+    .T-detail {
+        color: white;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        position: relative;
+        bottom: 225px;
+    }
+
+    .T-poster {
+        width: 300px;
+        border-radius: 10px;
+        margin-left: 25px;
+        color: #fff;
+        box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+    }
 }
