--- a/src/Component/gameCard.css
+++ b/src/Component/gameCard.css
@@ -290,3 +290,26 @@
     opacity: 1;
     transform: scale(1);
 }
+
+.gameCard .popup-overlay {
+    position: absolute;
+    z-index: 1000;
+    border: #ffffff;
+    border-radius: 50%;
+}
+
+.gameCard iframe {
+    position: absolute;
+    width: 335px;
+    height: 220px;
+    z-index: 500;
+}
+
+@media (max-width: 691px) {
+    .gameCard iframe {
+        position: absolute;
+        width: 82vw;
+        height: 220px;
+        z-index: 500;
+    }
+}
