--- a/src/Pages/Cart/cart.css
+++ b/src/Pages/Cart/cart.css
@@ -1,53 +1,119 @@
-table {
+.table-container {
+    overflow-x: auto;
     width: 100%;
-    font-size: 1.3em;
+
+    margin-top: 50px;
+    color: #ffffff;
+    border-radius: 20px;
+    padding: 50px;
+    width: 100%;
+    height: 50vh;
+    background: var(--bgcolor);
+    box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
+        5px 5px 15px rgba(0, 0, 0, 0.35);
+}
+
+.table {
+    width: auto;
     border-collapse: collapse;
+
+    font-size: 1.3rem;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
-thead {
-    background: var(--second);
-}
-
-thead tr th {
-    padding: 19px 10px;
-}
-
-thead tr th:nth-child(2) {
-    min-width: 200px;
-}
-
-tr td {
-    padding: 10px;
-}
-
-tr img {
-    width: 50px;
-    margin: 0 3px;
-    border-radius: 3px;
-}
-
-tr td>.title {
-    display: flex;
-    align-items: center;
-    margin: 0 3px;
-}
-
-table tr {
+.table th,
+.table td {
+    padding: 8px;
+    border: 1px solid #ddd;
+    text-align: left;
     white-space: nowrap;
-    transition: .23s ease-in-out;
 }
 
-table tbody tr:hover {
-    background: #232323;
-    color: #ffff;
+.table th {}
+
+/* .table tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+} */
+
+.shopBagItem img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 10px;
 }
+
+
+.Box-CheckOut {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.Box-CheckOut .CheckOutBtn {
+    font-size: 1.3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.8rem 2rem;
+    border-radius: 20px;
+    cursor: pointer;
+    width: 250px;
+    height: 50px;
+    color: black;
+    font-weight: bold;
+
+    margin: 0 auto;
+    font-family: 'Bauhaus 93';
+    border-radius: 4px;
+    border: 2px solid var(--Red);
+    background-color: var(--Red);
+    border-radius: 20px;
+    color: #000;
+    transition: .3s;
+
+    text-align: center;
+    padding: 20px;
+}
+
+.Box-CheckOut .CheckOutBtn:hover {
+    border: 2px solid #ffffff;
+    background-color: #ffffff;
+    box-shadow: 8px 8px var(--Red);
+    transition: .3s;
+}
+
+/* .table tbody tr:hover {
+    background-color: #ddd;
+} */
+
+
+/* Responsive Styles */
+/* @media (max-width: 768px) {
+    .table-container {
+        overflow-x: auto;
+    }
+
+    .table {
+        width: auto;
+    }
+
+    .table th,
+    .table td {
+        white-space: nowrap;
+    }
+} */
 
 /* .shopBagTable {
     margin-top: 50px;
     color: #ffffff;
     border-radius: 20px;
     padding: 50px;
-    width: 100%;
+    width: 140%;
     background: var(--bgcolor);
     box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
         5px 5px 15px rgba(0, 0, 0, 0.35);
@@ -55,6 +121,8 @@ table tbody tr:hover {
 
 .shopBagTable thead tr {
     font-size: 1.3rem;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .shopBagTable thead tr th {
@@ -72,9 +140,9 @@ table tbody tr:hover {
     gap: 50px;
     font-size: 1.3rem;
     color: #ffffff;
-} */
+}
 
-/* .payment a {
+.payment a {
     padding: 10px 20px;
     text-decoration: none;
     color: #ffffff;
@@ -85,12 +153,12 @@ table tbody tr:hover {
     background: var(--bgcolor);
     box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
         5px 5px 15px rgba(0, 0, 0, 0.35);
-} */
+}
 
 
 
 
-/* .shopBagItem {
+.shopBagItem {
     margin-bottom: 20px;
 }
 
